--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -14,3 +14,39 @@ redis:
     max-wait: 100000
 
   database: 0
+
+server:
+  port: 8089
+
+spring:
+  thymeleaf:
+    mode: HTML
+    encoding: UTF-8
+    cache: false
+
+  datasource:
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    username: root
+    password: 1605103328
+    url: jdbc:mysql://localhost:3306/onlineaddressbook?serverTimezone=UTC&characterEncoding=UTF-8&useSSL=false&allowPublicKeyRetrieval=true
+  mvc:
+    static-path-pattern: /**
+    view:
+      prefix:
+
+  jpa:
+    show-sql: true
+    hibernate:
+      ddl-auto: update
+    database: mysql
+    open-in-view: true
+
+  resources:
+    static-locations: classpath:/META-INF/resources/,classpath:/resources/,classpath:/static/,classpath:/public/,file:${web.upload-path}
+
+logging:
+  level:
+    cn.edu.ncu.onlineaddressbook: debug
+
+
+
