--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,19 +1,5 @@
-redis:
-  host: 127.0.0.1
-  port: 6379
-  timeout: 2000
-  password: 1605103328
-  pool:
-    # 连接池最大连接数（使用负值表示没有限制）
-    max-active: 8
-    # 连接池中的最大空闲连接
-    max-idle: 10
-    # 连接池中的最小空闲连接
-    min-idle: 0
-    # 连接池最大阻塞等待时间（使用负值表示没有限制）
-    max-wait: 100000
 
-  database: 0
+
 
 server:
   port: 8089
@@ -41,6 +27,24 @@ spring:
 
   resources:
     static-locations: classpath:/META-INF/resources/,classpath:/resources/,classpath:/static/,classpath:/public/,file:${web.upload-path}
+
+  redis:
+    host: 127.0.0.1
+    port: 6379
+    timeout: 3000
+    password: 1605103328
+    jedis:
+      pool:
+      # 连接池最大连接数（使用负值表示没有限制）
+        max-active: 8
+      # 连接池中的最大空闲连接
+        max-idle: 10
+      # 连接池中的最小空闲连接
+        min-idle: 0
+      # 连接池最大阻塞等待时间（使用负值表示没有限制）
+        max-wait: 100000
+
+    database: 0
 
 logging:
   level:
